removed the transient exception handling and organized the code.

--- a/Dapper.UnitOfWork.Example/Dapper.UoW.ConsoleUI.csproj
+++ b/Dapper.UnitOfWork.Example/Dapper.UoW.ConsoleUI.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dapper.UnitOfWork\Dapper.UnitOfWork.csproj" />
+    <ProjectReference Include="..\Dapper.UnitOfWork\Dapper.UoW.csproj" />
   </ItemGroup>
 
 </Project>
