--- a/Dapper.UoW/Dapper.UoW.csproj
+++ b/Dapper.UoW/Dapper.UoW.csproj
@@ -2,25 +2,17 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard1.3;netstandard2.0;net451</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.6.3</Version>
-    <Authors>Alessandro Petrelli</Authors>
-    <Company>OUTMATIC Alessandro Petrelli</Company>
-    <PackageReleaseNotes>1.6.3
-- minor optimization
-1.6.2
-- async support
-1.4.1
-- added multitargeting
-1.4.0
-- allow to pass a specific IExceptionDetector. Fix retries and, by default, use don't retry at all
-- now targeting .netstandard 1.3 to allow support for .net framework 4.6
-1.3.0
-- change target to .net standard</PackageReleaseNotes>
-    <AssemblyVersion>1.6.3.0</AssemblyVersion>
-    <FileVersion>1.6.3.0</FileVersion>
+    <Version>1.0.0</Version>
+    <Authors>Edilson Samuel</Authors>
+    <Company>Twodio</Company>
+    <PackageReleaseNotes>1.0
+- added a handler for transient exceptions.</PackageReleaseNotes>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Copyright>Copyright (c) 2019 OUTMATIC Alessandro Petrelli</Copyright>
+    <Copyright>Copyright (c) 2019 Twodio</Copyright>
     <LangVersion>latest</LangVersion>
+    <Product>Dapper.UoW (Unit Of Work)</Product>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.60.6" />
